--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -1,14 +1,19 @@
 
 .footer {
   background-color: #222;
+  display: flex;
+  align-content: center;
+  justify-content: center;
   color: #ddd;
-  text-align: center;
-  padding: 0.2rem;
+  /* text-align: center; */
+  /* padding: 0.2rem; */
   position: fixed;
   bottom: 0;
   width: 100%;
   height: 5%;
-  margin-top: 2rem;
+  padding-bottom:6vh ;
+
+  /* margin-top: 2rem; */
   font-size: 0.9rem;
  
 }
@@ -16,5 +21,6 @@
   .footer {
     font-size: 0.8rem;
     padding: 0.7rem;
+    padding-bottom:6vh ;
   }
 }
